Add full registration IP info to the users show endpoint
