# swagger/v1/swagger.yaml
@@ -233,7 +233,10 @@ paths:
                       username: cleo
                       email: cleo@kohrvid.com
                       is_admin: false
-                      registration_ip_info_id: 7
+                      registration_ip_info:
+                        address: 213.152.176.135
+                        latitude: '52.374'
+                        longitude: '4.8897'
                       created_at:
                       updated_at:
         '404':
@@ -323,13 +326,15 @@ paths:
               examples:
                 success response:
                   value:
-                  - page_id: 8
+                  - id: 5
+                    page_id: 8
                     user_id:
                     visited_at: 2024.04.03 13:00:00
                     ip_address: 213.152.176.135
                     latitude: 52.374
                     longitude: 4.8897
-                  - page_id: 4
+                  - id: 6
+                    page_id: 4
                     user_id:
                     visited_at: 2024.04.04 00:50:00
                     ip_address: 213.152.176.135
@@ -351,7 +356,7 @@ paths:
                     data:
                       page_id: 4
                       user_id:
-                      visited_at: 2024.04.08 01:06:35
+                      visited_at: 2024.04.08 12:16:42
                       ip_address: 213.152.176.135
                       latitude: 0.0
                       longitude: 0.0
@@ -378,7 +383,7 @@ paths:
                   default:
                 visited_at:
                   type: string
-                  default: 2024.04.08 01:06:35
+                  default: 2024.04.08 12:16:42
                 ip_info_attributes:
                   type: object
                   properties:
